# desafio-cpp

./: CMakeLists.txt  Dockerfile  Informacoes.txt  build  infos.txt
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  server.cpp
src/: CMakeLists.txt
src/client/: .client.cpp.swp  CMakeLists.txt  Makefile  client  client.cpp
src/client/resources/config/: client.properties
src/server/: .server.cpp.swp  CMakeLists.txt  server  server.cpp
src/server/resources/config/: server.properties
